# bap-novosad

./: .gitignore  Lidar_demo_continuous_plot.py  pip_requirements.txt
3D models/: Lower Carrier.stl  Motor Shaft Gear CW.stl  Rod x6.stl
3D models/v1.0/: Bottom.stl  DC housing.stl  Gear CCW x6.stl  Platform Mount.stl  Platform.stl  Ring Gear Lid.stl  Upper Carrier.stl
3D models/v1.1/: Bottom.stl  CCW Gear x6.stl  DC housing.stl  Lower Carrier.stl  Platform Mount.stl  Platform.stl  Ring Gear Lid.stl  Upper Carrier.stl  changelog.txt  model_attribution.txt
AngleRes (Tilt, Step)/: angleResTiltOnly.asv  angleResTiltOnly.m  angleResTiltPlusGearbox.asv  angleResTiltPlusGearbox.m  angleRes_TiltOnly.tex  test.tex
IMU/: platformio.ini
IMU/src/: compFilterIMU.cpp  compFilterIMU.h  lcd.cpp  lcd.h  main.cpp
Point Cloud Distribution/: 1m0,1tol.pgf  2m0,1tol.pgf  3m0,1tol.pgf  Point_distribution_measurement.py
code/: README.md  pc.py  pcd_visualizer.py  pcd_visualizer_outlier_removal.py  requirements.txt
code/pico_load/: main.py  secrets.py  stepper.py
experimenting/uart(IT WORKS)/: CMakeLists.txt  notes.txt  uart.c
experimenting/uart_python/: led_off_1_ms.uf2  led_on_1_ms.uf2  main.py  main_build.uf2  manifest_uart_bridge.py  notes.txt
experimenting/uart_wifiTCP_python/: notes.txt  pc.py
latex_submit/: main.tex
latex_submit/conclusion/: conclusion.tex
latex_submit/design/: 30rotate_pointCloud.tex  design.tex  tilt_pointCloud.tex
latex_submit/drafts/: gearbox_design.txt  transmission_setup.txt
latex_submit/electronics_software/: electronics_software.tex
(+46 files in other folders)
